--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -1,15 +1,25 @@
-# .github/workflows/netlify.yml
 name: Build and Deploy to Netlify
 on:
-  push:
   pull_request:
+    branches:
+      - develop
+
 jobs:
   build:
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@v2
+    runs-on: ubuntu-latest
 
-      # ( Build to ./dist or other directory... )
+    steps:
+      # Get code from repo
+      - name: Checkout code
+        uses: actions/checkout@v1
+      # Install NodeJS
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      # Run npm install and build on our code
+      - run: npm install
+      - run: npm run build --if-present
 
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v1.2
