--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -18,12 +18,12 @@ jobs:
           node-version: 12.x
       # Run npm install and build on our code
       - run: npm install
-      - run: npm run build --if-present
+      - run: npm run build
 
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v1.2
         with:
-          publish-dir: './dist'
+          publish-dir: './build'
           production-branch: develop
           github-token: ${{ secrets.GITHUB_TOKEN }}
           deploy-message: "Deploy from GitHub Actions"
